# codebase-parser

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  code.db  example_schema.sql  main.py  notes.txt  pyproject.toml  test.py
.claude/skills/codebase-parser/: SKILL.md
parse/: db.py  parser.py  processor.py  schema.sql
parse/parsers/: factory.py  python_lang.py
src/: assigner.py  db.py  git_utils.py  processor.py  schema.sql  utils.py
src/mcp/: clip.py  directory_tree.py  file_overview.py  search_symbols.py  server.py  skill.py  structure.py  symbol_context.py
src/parsers/: base.py  factory.py  go_lang.py  javascript_lang.py  parser_utils.py  python_lang.py
src/tests/: conftest.py  test_gitignore_filter.py  test_processor_incremental.py  test_python_parser.py
src/tests/files_to_parse/golang/: basic.go  duplicate_reference_ids.go  import_aliases.go  imports_multiple.go  interfaces.go  is_test_cases.go  references.go  test_generics.go  type_annotations_more.go
src/tests/files_to_parse/javascript/: test_js_imports.js  test_js_references.js  test_js_symbols.js  test_ts_import_type.ts  test_ts_types.ts  test_tsx_component.tsx
src/tests/files_to_parse/python/: another_file.py  ctor_param_self_call.py  duplicate_reference_ids.py  external_refs_filter.py  file.py  import_after_use_path.py  imports_aliases.py  imports_multiple.py  is_test_cases.py  references_cases.py  references_dotted_and_chained.py  type_annotations_complex.py
src/tests/go_parser/: test_go_generics.py  test_go_imports.py  test_go_is_test.py  test_go_reference_resolution.py  test_go_references.py  test_go_snapshot_deletion_and_context.py  test_go_snapshots.py  test_go_symbols.py  test_go_type_annotations_more.py
src/tests/javascript_parser/: test_javascript_factory.py  test_javascript_helpers.py  test_javascript_processor_normalize.py  test_javascript_snapshots.py  test_js_imports.py  test_js_references.py  test_js_symbols.py  test_ts_import_type.py  test_ts_types.py  test_tsx_component.py
src/tests/python_parser/: _assertions.py  test_imports.py  test_is_test.py  test_py_snapshots.py  test_py_symbols.py  test_py_type_annotations_more.py  test_reference_resolution.py  test_references.py  test_snapshot_deletion_and_context.py  test_snapshots.py  test_symbols.py  test_type_annotations_more.py
