[project]
name = "codebase-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "xxhash>=3.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
]
