[project]
name = "codebase-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.0",
    "pathspec>=1.1.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "xxhash>=3.6.0",
]

[project.scripts]
codebase-parser = "src.mcp.server:main"

[dependency-groups]
dev = [
    "prek>=0.3.10",
    "pytest-cov>=6.0.0",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]

[tool.pytest.ini_options]
testpaths = [ "src/tests" ]
pythonpath = [ "." ]

[tool.ruff]
target-version = "py312"
extend-exclude = ["src/tests/files_to_parse/"]
lint.extend-select = [
    "A",     # Builtins
    "DTZ",   # Datetime
    "SIM",   # Simplify
    "I",     # Isort Imports
    "S",     # Bandit
    "PT",    # Pytest
    "B",     # BugBear
    "N",     # Naming Conventions
    "RUF",   # Ruff Specific Rules
    "PTH",   # Pathlib
    "ARG",   # Unused Args
    "C4",    # Force Current List Comprehensions
    "RET"    # Return Checks
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "S607"]
"_assertions.py" = ["S101"]

[tool.ty.src]
exclude = ["src/tests/files_to_parse/"]
